# web_scrapping_wiki_aoe3de

./: .gitignore  db.py  pyproject.toml  test.drawio  ws_lab.ipynb
config/: database.py  settings.py
notebooks/: ws_all.ipynb  ws_find_infobox.ipynb  ws_href_units.ipynb  ws_infobox.ipynb  ws_lab.ipynb
src/: scrap_hrefs.py  scrap_infobox.py  scraper.py  unit_data_scraper.py  utils.py
