[tool.poetry]
name = "aoe3de-data-analysis"
version = "0.1.0"
description = ""
authors = ["Jonathan Díaz <jonathan.diazm5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
ipykernel = "^6.29.5"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
