[tool.poetry]
name = "aoe3de-web-scraper"
version = "0.1.0"
description = ""
authors = ["Jonathan Díaz <jonathan.diazm5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
ipykernel = "^6.29.5"
requests = "^2.32.3"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"